@@ -1,7 +1,7 @@
 //
 // HTTPClientSession.h
 //
-// $Id: //poco/1.3/Net/include/Poco/Net/HTTPClientSession.h#5 $
+// $Id: //poco/1.3/Net/include/Poco/Net/HTTPClientSession.h#6 $
 //
 // Library: Net
 // Package: HTTPClient
@@ -77,6 +77,10 @@ class Net_API HTTPClientSession: public HTTPSession
 	///
 	/// See RFC 2616 <http://www.faqs.org/rfcs/rfc2616.html> for more
 	/// information about the HTTP protocol.
+	///
+	/// Proxies and proxy authorization (only HTTP Basic Authorization)
+	/// is supported. Use setProxy() and setProxyCredentials() to
+	/// set up a session through a proxy.
 {
 public:
 	HTTPClientSession();
@@ -129,6 +133,24 @@ public:
 		
 	Poco::UInt16 getProxyPort() const;
 		/// Returns the proxy port number.
+		
+	void setProxyCredentials(const std::string& username, const std::string& password);
+		/// Sets the username and password for proxy authentication.
+		/// Only Basic authentication is supported.
+		
+	void setProxyUsername(const std::string& username);
+		/// Sets the username for proxy authentication.
+		/// Only Basic authentication is supported.
+
+	const std::string& getProxyUsername() const;
+		/// Returns the username for proxy authentication.
+		
+	void setProxyPassword(const std::string& password);
+		/// Sets the password for proxy authentication.	
+		/// Only Basic authentication is supported.
+
+	const std::string& getProxyPassword() const;
+		/// Returns the password for proxy authentication.
 
 	void setKeepAliveTimeout(const Poco::Timespan& timeout);
 		/// Sets the connection timeout for HTTP connections.
@@ -202,12 +224,22 @@ protected:
 
 	bool mustReconnect() const;
 		/// Checks if we can reuse a persistent connection.
+		
+	virtual void proxyAuthenticate(HTTPRequest& request);
+		/// Sets the proxy credentials (Proxy-Authorization header), if
+		/// proxy username and password have been set.
+
+	void proxyAuthenticateImpl(HTTPRequest& request);
+		/// Sets the proxy credentials (Proxy-Authorization header), if
+		/// proxy username and password have been set.
 
 private:
 	std::string     _host;
 	Poco::UInt16    _port;
 	std::string     _proxyHost;
 	Poco::UInt16    _proxyPort;
+	std::string     _proxyUsername;
+	std::string     _proxyPassword;
 	Poco::Timespan  _keepAliveTimeout;
 	Poco::Timestamp _lastRequest;
 	bool            _reconnect;
@@ -245,6 +277,18 @@ inline const std::string& HTTPClientSession::getProxyHost() const
 inline Poco::UInt16 HTTPClientSession::getProxyPort() const
 {
 	return _proxyPort;
+}
+
+
+inline const std::string& HTTPClientSession::getProxyUsername() const
+{
+	return _proxyUsername;
+}
+
+
+inline const std::string& HTTPClientSession::getProxyPassword() const
+{
+	return _proxyPassword;
 }
 
 
