@@ -1,7 +1,7 @@
 //
 // HTTPSessionInstantiator.h
 //
-// $Id: //poco/1.3/Net/include/Poco/Net/HTTPSessionInstantiator.h#1 $
+// $Id: //poco/1.3/Net/include/Poco/Net/HTTPSessionInstantiator.h#2 $
 //
 // Library: Net
 // Package: HTTPClient
@@ -87,9 +87,20 @@ protected:
 	Poco::UInt16 proxyPort() const;
 		/// Returns the proxy port.
 
+	void setProxyCredentials(const std::string& username, const std::string& password);
+		/// Sets the username and password for proxy authorization (Basic auth only).
+
+	const std::string& proxyUsername() const;
+		/// Returns the username for proxy authorization.
+		
+	const std::string& proxyPassword() const;
+		/// Returns the password for proxy authorization.
+
 private:
 	std::string  _proxyHost;
 	Poco::UInt16 _proxyPort;
+	std::string  _proxyUsername;
+	std::string  _proxyPassword;
 	
 	friend class HTTPSessionFactory;
 };
@@ -107,6 +118,18 @@ inline const std::string& HTTPSessionInstantiator::proxyHost() const
 inline Poco::UInt16 HTTPSessionInstantiator::proxyPort() const
 {
 	return _proxyPort;
+}
+
+
+inline const std::string& HTTPSessionInstantiator::proxyUsername() const
+{
+	return _proxyUsername;
+}
+
+
+inline const std::string& HTTPSessionInstantiator::proxyPassword() const
+{
+	return _proxyPassword;
 }
 
 
